--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/appetiser.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/appetiser.css
@@ -153,6 +153,7 @@
     @media (--viewport-md-min) {
       padding-right: 60px;
       padding-left: 60px;
+      height: auto;
     }
 
     .appetiser__image-wrapper {
