--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -75,51 +75,61 @@
 {% set typeUrl = path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_article_type.entity.id}) %}
 
 <div class="inspiration-overview__item">
-  <div class="inspiration-overview__item-inner">
-    <a href="{{ url }}" class="inspiration-overview__item-link" aria-label="{{ node.field_article_type.entity.name.value }}">
-      <div class="inspiration-overview__image">
-        {{ content.field_list_media }}
-        <a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}">
-          <div class="inspiration-overview__type">
-            {{ node.field_article_type.entity.name.value }}
-          </div>
-        </a>
-      </div>
-      <div class="inspiration-overview__content">
-        {% if content.field_class[0]|length > 0 %}
-          <div class="inspiration-overview__class">
-            {% include '@reusable-component/svg-icon.twig' with {
+	<div class="inspiration-overview__item-inner">
+		<a href="{{ url }}" class="inspiration-overview__item-link" aria-label="{{ node.field_article_type.entity.name.value }}">
+			<div class="inspiration-overview__image">
+				{{ content.field_list_media }}
+				<a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}">
+					<div class="inspiration-overview__type">
+						{{ node.field_article_type.entity.name.value }}
+					</div>
+				</a>
+			</div>
+			<div class="inspiration-overview__content">
+				{% if content.field_class[0]|length > 0 %}
+					<div class="inspiration-overview__class">
+						{% include '@reusable-component/svg-icon.twig' with {
               'attributes': '',
               'svgIconName': 'reading'
             } %}
-            {{ content.field_class }}
-          </div>
-        {% endif %}
-        <a href="{{ url }}" class="inspiration-overview__content__wrapper">
-        <div class="inspiration-overview__title">
-          {{ label }}
-        </div>
-        <div class="inspiration-overview__description">
-          {{ content.field_description }}
-        </div>
-        </a>
-      </div>
-    </a>
-    {% if subject_items|length > 0 %}
-      <div class="inspiration-overview__subject">
-        {% if subject_items|length > 2 %}
-          {% for item in subject_items|slice(0, 2) %}
-            {% if item.entity.tid.value %}
-              <a class="inspiration-overview__subject-item" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.tid.value}) }}">{{ item.entity.name.value }}</a>
-            {% endif %}
-          {% endfor %}
-          <div class="inspiration-overview__subject-item--more-text">
-            + {{ subject_items|length - 2 }} {{ 'subjects'|t }}
-          </div>
-        {% else %}
-          {{ content.field_subject }}
-        {% endif %}
-      </div>
-    {% endif %}
-  </div>
+						{# loop through field_class #}
+						{% for item in content.field_class['#items'] %}
+							{% set term = item.entity %}
+							{{ term.name.value }}
+							{# adding separator  if its not last element in loop #}
+							{% if not loop.last %}
+								{{ '|' }}
+							{% endif %}
+						{% endfor %}
+					</div>
+				{% endif %}
+				<a href="{{ url }}" class="inspiration-overview__content__wrapper">
+					<div class="inspiration-overview__title">
+						{{ label }}
+					</div>
+					<div class="inspiration-overview__description">
+						{{ content.field_description }}
+					</div>
+				</a>
+			</div>
+		</a>
+		{% if subject_items|length > 0 %}
+			<div class="inspiration-overview__subject">
+				{% if subject_items|length > 2 %}
+					{% for item in subject_items|slice(0, 2) %}
+						{% if item.entity.tid.value %}
+							<a class="inspiration-overview__subject-item" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.tid.value}) }}">{{ item.entity.name.value }}</a>
+						{% endif %}
+					{% endfor %}
+					<div class="inspiration-overview__subject-item--more-text">
+						+
+						{{ subject_items|length - 2 }}
+						{{ 'subjects'|t }}
+					</div>
+				{% else %}
+					{{ content.field_subject }}
+				{% endif %}
+			</div>
+		{% endif %}
+	</div>
 </div>
