--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--page--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--page--list.html.twig
@@ -76,8 +76,7 @@
 		<a href="{{ url }}" class="inspiration-overview__item-link" aria-label="{{ node.field_article_type.entity.name.value }}">
 			<div class="inspiration-overview__image">
 				{{ content.field_list_media }}
-				<a href="/{{ url|split('/')[1] }}" aria-label="{{ node.field_article_type.entity.name.value }}">
-				</a>
+				<a href="/{{ url|split('/')[1] }}" aria-label="{{ node.field_article_type.entity.name.value }}"></a>
 			</div>
 			<div class="inspiration-overview__content">
 				{% if content.field_class[0]|length > 0 %}
@@ -86,7 +85,17 @@
               'attributes': '',
               'svgIconName': 'reading'
             } %}
-						{{ content.field_class }}
+
+						{# loop through field_class items #}
+						{% for item in content.field_class['#items'] %}
+							{% set term = item.entity %}
+							{{ term.name.value }}
+							{# adding separator  if its not last element in loop #}
+							{% if not loop.last %}
+								{{ '|' }}
+							{% endif %}
+						{% endfor %}
+
 					</div>
 				{% endif %}
 				<a href="{{ url }}" class="inspiration-overview__content__wrapper">
@@ -119,4 +128,3 @@
 		{% endif %}
 	</div>
 </div>
-
