print style adjustments

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -99,7 +99,7 @@
   }
 
   .facts-box {
-    page-break-before: always; // force page break before facts box
+    page-break-before: always;
     display: inline;
     margin: 0;
     padding: 0;
