--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -32,6 +32,9 @@
                   } %}
 						{{ "Filter"|t }}
 					</span>
+					<div class="overview-form__search-facets--mobile">
+						{{ element['facets'].sort }}
+					</div>
 				</div>
 				<div class="overview-form__search-input">
 					{% if element['facets'].text %}
