SIS2-321, SIS2-365, SIS2-455, SIS2-472, SIS2-471, SIS2-474, SIS2-413

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/templates/factbox-items.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/templates/factbox-items.html.twig
@@ -1,3 +1,4 @@
+{% spaceless %}
 {% for title, inspiration in items %}
   <div class="facts-box__inspiration-group">
     <div class="facts-box__inspiration-title">{{ title }}</div>
@@ -6,4 +7,4 @@
     {% endfor %}
   </div>
 {% endfor %}
- 
+{% endspaceless %}
