--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -39,7 +39,7 @@
 
   &__description {
     margin-bottom: 24px;
-    font-size: var(--base-font-size-medium);
+    font-size: var(--base-font-size-large);
 
     img {
       max-width: 100%;
