--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
@@ -8,6 +8,12 @@
   --hero-narrow-max-height: 350px;
 }
 
+.hero__image-wrapper {
+  .contextual-region {
+    position: unset;
+  }
+}
+
 .hero {
   position: relative;
   max-height: var(--hero-max-height);
