--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -359,7 +359,7 @@
 						</div>
 					</div>
 				{% endif %}
-				{% if inspirations %}
+				{% if inspirations|render|length > 0 %}
 					<div class="facts-box">
 						<div class="facts-box__title">
 							Inspiration og lignende materialer
