--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/taxonomy-term--article-types.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/taxonomy-term--article-types.html.twig
@@ -46,5 +46,5 @@
   </div>
 </div>
 <div{{ attributes }}>
-  {{ content|without('description') }}
+  {{ content|without(['description', 'field_page_link']) }}
 </div>
