fixed mobile view for filters and removing label from mobile

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -337,6 +337,13 @@
 
   @media (--viewport-ms-max) {
     min-width: 100% !important;
+    /* elipse text if not enough space */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+
+
   }
 }
 
@@ -380,6 +387,10 @@
 
     @media (--viewport-ms-max) {
       display: block;
+
+      .label {
+        display: none;
+      }
     }
    }
 }
