quick bugfix for search field

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -362,9 +362,8 @@
 
 .overview-form__search-facets {
   margin-top: -12px;
-  margin-left: auto;
-  width: 330px;
-  display: block;
+  display: flex;
+  justify-content: end;
 
   /* dekstop facet 'sort by' */
   @media (--viewport-ms-max) {
