--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -171,6 +171,16 @@ table {
   z-index: 999;
 }
 
+.node-preview-container {
+  position: sticky;
+  top: calc(var(--header-height) + var(--meta-menu-height));
+  max-width: var(--container-width);
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: var(--container-spacing);
+  padding-left: var(--container-spacing);
+}
+
 
 @media print {
   body,
