--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -48,6 +48,30 @@
   }
 }
 
+media {
+  width: 100%;
+  display: block;
+  text-align: center;
+  picture {
+    display: inline-block;
+    margin-left: auto;
+  }
+  &.align-center,
+  &.align-left,
+  &.align-right {
+    float: none;
+  }
+  &.align-right {
+    text-align: right;
+  }
+  &.align-left {
+     text-align: left;
+   }
+  &.align-center {
+     text-align: center;
+   }
+}
+
 .print-button {
   display: flex;
   align-items: center;
