--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/views/views-view--taxonomy-term.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/views/views-view--taxonomy-term.html.twig
@@ -34,43 +34,43 @@
   set classes = [
   dom_id ? 'js-view-dom-id-' ~ dom_id,
   'section',
-  'section--spacing-top-medium',
+  'section--spacing-top-none',
   'section--spacing-bottom-none',
   'js-term-overview'
 ]
 %}
-<div{{ attributes.addClass(classes) }}>
+<div{{attributes.addClass(classes)}}>
 
-  {{ title_prefix }}
-  {{ title }}
-  {{ title_suffix }}
+	{{ title_prefix }}
+	{{ title }}
+	{{ title_suffix }}
 
-  {% if header %}
-    <header>
-      {{ header }}
-    </header>
-  {% endif %}
+	{% if header %}
+		<header class="section--spacing-bottom-medium">
+			{{ header }}
+		</header>
+	{% endif %}
 
-  {{ exposed }}
-  {{ attachment_before }}
+	{{ exposed }}
+	{{ attachment_before }}
 
-  <div class="container">
-    {% if rows -%}
-      {{ rows }}
-    {% elseif empty -%}
-      {{ empty }}
-    {% endif %}
-    {{ pager }}
-  </div>
+	<div class="container">
+		{% if rows -%}
+			{{ rows }}
+		{% elseif empty -%}
+			{{ empty }}
+		{% endif %}
+		{{ pager }}
+	</div>
 
-  {{ attachment_after }}
-  {{ more }}
+	{{ attachment_after }}
+	{{ more }}
 
-  {% if footer %}
-    <footer>
-      {{ footer }}
-    </footer>
-  {% endif %}
+	{% if footer %}
+		<footer>
+			{{ footer }}
+		</footer>
+	{% endif %}
 
-  {{ feed_icons }}
+	{{ feed_icons }}
 </div>
