--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -179,6 +179,7 @@ table {
   margin-right: auto;
   padding-right: var(--container-spacing);
   padding-left: var(--container-spacing);
+  display: none;
 }
 
 
