SIS2-487: redo and a bunch of small/translation fixes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -41,6 +41,14 @@
       }
     }
   }
+  .overview-form__search-facets {
+    align-items: baseline;
+
+    /* hide default label */
+    label {
+      display: none !important;
+    }
+  }
 
   &-contents {
     display: grid;
