--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -19,6 +19,9 @@
 		<div class="row overview-form__header overview-form__heading-facets">
 			<div class="col-xs-12 col-md-8 ">
 				<div class="overview-form__search-facets overview-form__search-facets--mobile">
+					<span class="overview-form__toolbar-label">{{ "Sorted by"|t }}:</span>
+
+
 					{{ element['facets'].sort }}
 				</div>
 
