SIS2-284: Changed permissions on media upload for dot on map, blogs and articles. Added custom styling for node add and edit forms for anonymous, blogger and organization user roles. Set permissions on media library files to only show you own files for anonymous, blogger and organization users. Added danish labels and descriptions for fields.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/edit-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/edit-form.css
@@ -1,5 +1,39 @@
 .node-edit-form {
   &__title {
-    padding: 50px 0;
+    width: 100%;
+    max-width: var(--container-width);
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: var(--container-spacing-mobile);
+    padding-left: var(--container-spacing-mobile);
+
+    @media (--viewport-md-min) {
+      padding-right: var(--container-spacing);
+      padding-left: var(--container-spacing);
+    }
+
+    & #block-pageheader {
+      padding: 50px 0;
+      font-weight: var(--heading-font-weight);
+      font-size: var(--base-font-size-xxlarge);
+      font-family: var(--heading-font-family);
+      line-height: 1;
+
+      @media (--viewport-ms-min) {
+        font-size: var(--base-font-size-xxxlarge);
+      }
+
+      @media (--viewport-sm-min) {
+        font-size: var(--base-font-size-xxxxlarge);
+      }
+    }
+  }
+}
+
+.node-article-edit-form,
+.node-blog-post-form,
+.node-dot-on-map-form {
+  .entity-meta {
+    display: none;
   }
 }
