--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--list.html.twig
@@ -88,7 +88,7 @@
       </div>
       <div class="inspiration-overview__content">
         <div class="inspiration-overview__description">
-          {{ node.body.summary }}
+          {{ content.field_description }}
         </div>
       </div>
     </a>
