--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--slideshow.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--slideshow.html.twig
@@ -84,7 +84,7 @@
               {{ node.label }}
             </div>
             <div class="entity-slideshow__description">
-              {{ node.body.summary }}
+              {{ content.field_description }}
             </div>
           </div>
         </div>
