--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -101,7 +101,7 @@
               {% if atom('footer-col1-header') %}
                 <h4>{{ atom('footer-col1-header') }}</h4>
               {% endif %}
-              {{ latest_news }}
+              {{ latest_content }}
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
               <div class="footer-some-header">
