--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-overview.html.twig
@@ -1,5 +1,7 @@
 {{ attach_library('sis/lexicon') }}
 <div{{ attributes.addClass('lexicon') }}>
+  {{ title_prefix }}
+  {{ title_suffix }}
   <div>
     <div class="row">
       {{ filters }}
