--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -179,7 +179,40 @@ table {
   margin-right: auto;
   padding-right: var(--container-spacing);
   padding-left: var(--container-spacing);
-  display: none;
+  .js-form-item-view-mode {
+    display: none;
+  }
+  a {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 55px;
+    padding: 0 40px;
+    overflow: visible;
+    color: var(--color-white);
+    font-weight: 800;
+    font-size: var(--base-font-size);
+    font-family: var(--base-font-family);
+    white-space: nowrap;
+    text-decoration: none;
+    background-color: var(--color-green-dark);
+    border: 2px solid var(--color-green-dark);
+    border-radius: 50px;
+    cursor: pointer;
+    &:before {
+       display: block;
+       width: 12px;
+       height: 12px;
+       transform: translateY(-50%) rotate(45deg);
+       content: "";
+       border-bottom: 2px solid var(--theme-arrow-color);
+       border-left: 2px solid var(--theme-arrow-color);
+       position: absolute;
+       top: 50%;
+       left: 20px;
+    }
+  }
 }
 
 
