--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -104,6 +104,10 @@
       background-size: contain;
       content: "";
     }
+
+    a {
+      text-decoration: none;
+    }
   }
 
   &__inspiration-group {
